# ec_gcm

./: .gitignore  .gitmodules  Agent.cpp  Agent.h  CMakeCache.txt  CMakeLists.txt  ECAPI.cpp  ECAPI.h  ElasticContainer.cpp  ElasticContainer.h  GlobalCloudManager.cpp  GlobalCloudManager.h  GlobalControlManager.cpp  GlobalControlManager.h  Makefile  Manager.cpp  Manager.h  README.md  Server.cpp  Server.h  Serx.cpp  SubContainer.cpp  SubContainer.h  cmake_install.cmake  container.cpp  container.h  container_handler.cpp  container_handler.h  deploy_ec_containers.md  diff.txt  diff2.txt  ec_gcm  ec_gcm.cbp  grpc_async_test  loop_test  main.cpp  manager.cpp  manager.h  msg.h  om.h  (+4 more)
Agents/: Agent.h  AgentClient.cpp  AgentClient.h  AgentClientDB.cpp  AgentClientDB.h  CMakeLists.txt  containerUpdateGrpc.proto
DeployServerGRPC/: CMakeLists.txt  DeployerExportService.cpp  DeployerExportService.h  DeployerExportServiceImpl.cpp  DeployerExportServiceImpl.h  deploy.proto  go.mod
cAdvisorSDK/include/: cAdvisorFacade.h
cAdvisorSDK/src/: cAdvisorFacade.cpp
cmake/: grpc.cmake
deploySDK/include/: DeployFacade.h
deploySDK/src/: DeployFacade.cpp
jsonSDK/include/: JSONFacade.h
jsonSDK/src/: JSONFacade.cpp
k8s/: pod_template.json
legacy/deploySDK/include/: DeployFacade.h
proto/: CMakeLists.txt
protoBufSDK/: cmake_install.cmake  msg.pb.cc  msg.pb.h
protoBufSDK/include/: ProtoBufFacade.h
protoBufSDK/src/: ProtoBufFacade.cpp
stats/: cpu.cpp  cpu.h  mem.cpp  mem.h
stats/global/: cpu_g.cpp  cpu_g.h  mem_g.cpp  mem_g.h
stats/local/: .mem_l.cpp.swp  cpu_l.cpp  cpu_l.h  mem_l.cpp  mem_l.h
stats/window/: Window.h  Window_impl.h
tests/: app_def.json  app_def_1_node.json  grpc_test.cpp  grpc_test_async.cpp  lh_app_def_1_node.json  run_continuous.cpp  run_test.cpp  test_deployment.cpp
tests/kub-dep-test/test-dep/: test.yaml
types/: k_msg.h  msg.cpp  msg.h  ports.h  types.h
